feat: add AI generation system, provider CRUD, and pipeline UX improvements
Add AI provider management with encrypted API keys, cost tracking, and
generation service with prompt templates. Enhance stage pipeline with
output versioning, action bar, and improved interview flow. Upgrade
export preview with SDP download and assembly improvements.

Excluded: schema.js build artifacts, .mcp.json (contains token)

--- a/projects/software-design-os/src/apps/web/package.json
+++ b/projects/software-design-os/src/apps/web/package.json
@@ -13,6 +13,7 @@
     "@sdos/shared": "workspace:*",
     "@tanstack/react-query": "^5.65.0",
     "clsx": "^2.1.0",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.474.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
