--- a/projects/software-design-os/src/apps/api/.env.example
+++ b/projects/software-design-os/src/apps/api/.env.example
@@ -4,3 +4,4 @@ CORS_ORIGIN=http://localhost:5173
 JWT_SECRET=change-me-to-a-random-secret
 JWT_EXPIRES_IN=7d
 REFRESH_TOKEN_EXPIRES_IN=30d
+ENCRYPTION_KEY=change-me-to-a-random-32-char-key
