--- a/projects/software-design-os/src/apps/api/package.json
+++ b/projects/software-design-os/src/apps/api/package.json
@@ -12,12 +12,14 @@
     "db:seed": "tsx src/db/seed.ts"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.77.0",
     "@hono/node-server": "^1.14.0",
     "@sdos/shared": "workspace:*",
     "bcryptjs": "^3.0.3",
     "dotenv": "^16.4.0",
     "drizzle-orm": "^0.38.0",
     "hono": "^4.7.0",
+    "openai": "^6.22.0",
     "postgres": "^3.4.0",
     "zod": "^3.24.0"
   },
