--- a/projects/software-design-os/src/apps/api/package.json
+++ b/projects/software-design-os/src/apps/api/package.json
@@ -20,11 +20,15 @@
     "drizzle-orm": "^0.38.0",
     "hono": "^4.7.0",
     "openai": "^6.22.0",
+    "adm-zip": "^0.5.16",
+    "node-cron": "^3.0.3",
     "postgres": "^3.4.0",
     "zod": "^3.24.0"
   },
   "devDependencies": {
+    "@types/adm-zip": "^0.5.5",
     "@types/bcryptjs": "^3.0.0",
+    "@types/node-cron": "^3.0.11",
     "@types/node": "^22.0.0",
     "drizzle-kit": "^0.30.0",
     "tsx": "^4.19.0",
