--- a/projects/software-design-os/src/apps/mcp/package.json
+++ b/projects/software-design-os/src/apps/mcp/package.json
@@ -6,7 +6,7 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "start:stdio": "node dist/index.js --stdio"
+    "start:stdio": "node dist/stdio.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.0",
